<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.album.AlbumCrearActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/title_crear_album"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreAlbumLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_albums_name"
            app:helperText="@string/nombre_album"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/nombre_album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcionLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_albums_description"
            app:helperText="@string/descripcion_album"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/descripcion_album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/coverLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_albums_cover"
            app:helperText="@string/cover_album"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/cover_album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/releasedateLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_albums_release_date"
            app:helperText="@string/releasedate_album"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/releasedate_album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextReleasedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genreLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_albums_genre"
            app:helperText="@string/genre_album"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/genre_album">

            <AutoCompleteTextView
                android:id="@+id/editTextGenre"
                android:hint="@string/hint_albums_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recordlabelLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_albums_record_label"
            app:helperText="@string/recordlabel_album"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/recordlabel_album">

            <AutoCompleteTextView
                android:id="@+id/editTextRecordlabel"
                android:hint="@string/hint_albums_record_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Contenido de la actividad -->

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_marginEnd="16dp"
                    android:onClick="cancelarOnClick"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:textColor="@color/black"
                    app:backgroundTint="?attr/colorSecondaryContainer"
                    style="?attr/materialButtonOutlinedStyle"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>