...
            android:layout_marginTop="26dp"
            android:background="?attr/colorSecondaryContainer"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_usuarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_coleccionistas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSecondaryContainer"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
...
