<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_inicio_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/ic_home_albumes_24dp"
        android:title="@string/title_album" />

    <item
        android:id="@+id/navigation_collector"
        android:icon="@drawable/ic_home_collectors_24dp"
        android:title="@string/title_collector" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_home_profile_24dp"
        android:title="@string/artists" />

</menu>